--- a/src/fertilizers/SupplierForm.form
+++ b/src/fertilizers/SupplierForm.form
@@ -206,6 +206,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Clear"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtclearActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jbtback">
           <Properties>
