--- a/src/fertilizers/SupplierForm.form
+++ b/src/fertilizers/SupplierForm.form
@@ -214,6 +214,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Back"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtbackActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
