ALVTableSimpleClassModel added to handle generic simple table model

--- a/src/fertilizers/PurchaseForm.form
+++ b/src/fertilizers/PurchaseForm.form
@@ -138,7 +138,10 @@
                                   </Group>
                                   <Component id="jlheader" min="-2" pref="350" max="-2" attributes="0"/>
                                   <Group type="102" alignment="0" attributes="0">
-                                      <Component id="jlamount" min="-2" pref="150" max="-2" attributes="0"/>
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Component id="jlamount" min="-2" pref="150" max="-2" attributes="0"/>
+                                          <Component id="jButton3" min="-2" pref="150" max="-2" attributes="0"/>
+                                      </Group>
                                       <EmptySpace type="separate" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
                                           <Component id="jtfamount" min="-2" pref="200" max="-2" attributes="0"/>
@@ -201,6 +204,7 @@
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jButton1" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                           <Component id="jButton2" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                          <Component id="jButton3" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
@@ -315,6 +319,11 @@
             <Component class="javax.swing.JButton" name="jButton2">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Clear Item Data"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JButton" name="jButton3">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="New Order "/>
               </Properties>
             </Component>
           </SubComponents>
