--- a/src/fertilizers/TestALVTableSimpleClassModel.form
+++ b/src/fertilizers/TestALVTableSimpleClassModel.form
@@ -74,6 +74,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Remove Row"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
